--- a/submission_notebook copy.ipynb
+++ b/submission_notebook copy.ipynb
@@ -3483,6 +3483,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9ad11db3",
+   "metadata": {},
+   "source": [
+    "# Model Evaluation:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "id": "c7ba3248",
@@ -3615,14 +3623,6 @@
     "print(f\"Recall:    {recall:.4f}\")\n",
     "print(f\"F1 Score:  {f1:.4f}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c86d5d16",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
